[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zenbento.py"
dynamic = ["version", "dependencies"]
license = {text = "MIT License"}
requires-python = ">=3.9"

[tool.setuptools]
packages = ["zenbento"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}